# ctx-submission

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: export_rows.py  plot_layout_gap.py
src/ctxlab/aggregate/: __main__.py
src/ctxlab/core/: inspect_context_manager.py  layout.py  types.py
src/ctxlab/eval/: __main__.py
src/ctxlab/inspect/: scorers.py  solvers.py
src/ctxlab/inspect/tasks/: hotpotqa.py  niah_srt.py
src/ctxlab/policies/: bm25.py  keyword.py  recency.py
tests/: test_bm25.py  test_layout.py
